--- a/ActivityStartup/app/src/main/res/values/dimens.xml
+++ b/ActivityStartup/app/src/main/res/values/dimens.xml
@@ -5,6 +5,8 @@
     <dimen name="toolbar_height">50dp</dimen>
     <dimen name="toolbar_title_size">18sp</dimen>
 
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
     <dimen name="item_icon_padding">10dp</dimen>
 
