--- a/ActivityStartup/app/src/main/res/layout/activity_main.xml
+++ b/ActivityStartup/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,7 @@
         android:layout_height="10dp"
         android:background="@color/greyBackground"/>
 
+    <!-- WebView -->
     <LinearLayout
         android:id="@+id/linear_web_view"
         android:layout_width="match_parent"
@@ -79,63 +80,42 @@
         android:layout_height="10dp"
         android:background="@color/greyBackground"/>
 
+    <!-- MWebView 图片点击查看大图 -->
+    <LinearLayout
+        android:id="@+id/linear_web_view_m"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="MWebView 图片点击查看大图"
+            style="@style/QuoteDetailTextStyle"/>
 
-    <!--&lt;!&ndash; 报价复议 &ndash;&gt;-->
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linear_review"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="@dimen/height_title_quote"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingRight="16dp"-->
-        <!--android:background="@color/whiteBackground">-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="@string/quote_review"-->
-            <!--style="@style/QuoteDetailTitleTextStyle"/>-->
 
-    <!--</LinearLayout>-->
-    <!--<View-->
-        <!--android:id="@+id/grey_line_review"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1px"-->
-        <!--android:background="@color/grayLineDarker"/>-->
+        <TextView
+            android:id="@+id/tv_web_view_m"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/QuoteDetailStatusTextStyle"/>
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linear_remark"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingRight="16dp"-->
-        <!--android:background="@color/whiteBackground">-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/quote_remark"-->
-            <!--style="@style/QuoteDetailTextStyle"/>-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
 
-        <!--<TextView-->
-            <!--android:id="@+id/tv_remarks_note"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginLeft="@dimen/item_icon_padding"-->
-            <!--android:text="采购价格便宜10元"-->
-            <!--style="@style/QuoteDetailStatusTextStyle"/>-->
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
 
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_enter5"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginLeft="@dimen/margin_arrow_right"-->
-            <!--android:visibility="gone"-->
-            <!--android:src="@drawable/enter"/>-->
 
-    <!--</LinearLayout>-->
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1px"-->
-        <!--android:background="@color/grayLineDarker"/>-->
 
 </LinearLayout>
