--- a/ActivityStartup/app/src/main/res/layout/activity_web_view.xml
+++ b/ActivityStartup/app/src/main/res/layout/activity_web_view.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.duan.android.activitystartup.WebViewActivity">
+    tools:context="com.duan.android.activitystartup.js_web.WebViewActivity">
 
     <include layout="@layout/base_title_bar"/>
 
