--- a/ActivityStartup/app/src/main/res/drawable/underline_orange_title.xml
+++ b/ActivityStartup/app/src/main/res/drawable/underline_orange_title.xml
@@ -4,8 +4,10 @@
         <shape xmlns:android="http://schemas.android.com/apk/res/android">
             <!--  填充颜色 -->
             <solid android:color="@color/colorTransparent"/>
-            <!--  底部线条颜色 -->
+            <!--  底部线条颜色 宽度 -->
             <stroke android:color="@color/orangeTab" android:width="8px"/>
+
+            <padding android:top="10dp" android:bottom="10dp"/>
         </shape>
     </item>
 </layer-list>
