--- a/ActivityStartup/app/src/main/res/layout/activity_info_update.xml
+++ b/ActivityStartup/app/src/main/res/layout/activity_info_update.xml
@@ -12,7 +12,7 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="@dimen/toolbar_height"
+        android:layout_height="50dp"
         android:id="@+id/edit"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="16dp"
