--- a/ActivityStartup/app/src/main/res/layout/activity_main.xml
+++ b/ActivityStartup/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,6 +8,8 @@
     tools:context="com.duan.android.activitystartup.MainActivity">
 
     <include layout="@layout/base_title_bar"/>
+
+    <!-- 修改信息 -->
     <LinearLayout
         android:id="@+id/linear_price"
         android:layout_width="match_parent"
@@ -21,7 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/unit_price_quote"
-            style="@style/QuoteDetailTextStyle"/>
+            style="@style/BlackTitleStyle"/>
 
         <TextView
             android:id="@+id/tv_price"
@@ -29,7 +30,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/item_icon_padding"
             android:text=""
-            style="@style/QuoteDetailStatusTextStyle"/>
+            style="@style/TextRightStyle"/>
 
         <ImageView
             android:id="@+id/iv_enter_price"
@@ -44,6 +45,7 @@
         android:layout_height="10dp"
         android:background="@color/greyBackground"/>
 
+    <!-- WebView -->
     <LinearLayout
         android:id="@+id/linear_web_view"
         android:layout_width="match_parent"
@@ -56,7 +58,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="WebView"
-            style="@style/QuoteDetailTextStyle"/>
+            style="@style/TextLeftStyle"/>
 
 
         <TextView
@@ -65,7 +67,43 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/item_icon_padding"
             android:text=""
-            style="@style/QuoteDetailStatusTextStyle"/>
+            style="@style/TextRightStyle"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
+
+    <!-- hw 物性表 含滑动字母指示条的 RecyclerView  未完待续 -->
+    <LinearLayout
+        android:id="@+id/linear_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="RecyclerView with Alphabet"
+            style="@style/TextLeftStyle"/>
+
+
+        <TextView
+            android:id="@+id/tv_recycler_view"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/TextRightStyle"/>
 
         <ImageView
             android:layout_width="wrap_content"
@@ -80,62 +118,147 @@
         android:background="@color/greyBackground"/>
 
 
-    <!--&lt;!&ndash; 报价复议 &ndash;&gt;-->
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linear_review"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="@dimen/height_title_quote"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingRight="16dp"-->
-        <!--android:background="@color/whiteBackground">-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:text="@string/quote_review"-->
-            <!--style="@style/QuoteDetailTitleTextStyle"/>-->
+    <!-- 高斯模糊 -->
+    <LinearLayout
+        android:id="@+id/linear_fur"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="FurGlass"
+            style="@style/TextLeftStyle"/>
 
-    <!--</LinearLayout>-->
-    <!--<View-->
-        <!--android:id="@+id/grey_line_review"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1px"-->
-        <!--android:background="@color/grayLineDarker"/>-->
 
-    <!--<LinearLayout-->
-        <!--android:id="@+id/linear_remark"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:orientation="horizontal"-->
-        <!--android:paddingLeft="16dp"-->
-        <!--android:paddingRight="16dp"-->
-        <!--android:background="@color/whiteBackground">-->
-        <!--<TextView-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="wrap_content"-->
-            <!--android:text="@string/quote_remark"-->
-            <!--style="@style/QuoteDetailTextStyle"/>-->
+        <TextView
+            android:id="@+id/tv_fur"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/TextRightStyle"/>
 
-        <!--<TextView-->
-            <!--android:id="@+id/tv_remarks_note"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginLeft="@dimen/item_icon_padding"-->
-            <!--android:text="采购价格便宜10元"-->
-            <!--style="@style/QuoteDetailStatusTextStyle"/>-->
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
 
-        <!--<ImageView-->
-            <!--android:id="@+id/iv_enter5"-->
-            <!--android:layout_width="wrap_content"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:layout_marginLeft="@dimen/margin_arrow_right"-->
-            <!--android:visibility="gone"-->
-            <!--android:src="@drawable/enter"/>-->
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
 
-    <!--</LinearLayout>-->
-    <!--<View-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1px"-->
-        <!--android:background="@color/grayLineDarker"/>-->
+    <!-- autoSizeTextView -->
+    <LinearLayout
+        android:id="@+id/linear_auto_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="AutoSizeText"
+            style="@style/TextLeftStyle"/>
+
+
+        <TextView
+            android:id="@+id/tv_auto_text"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/TextRightStyle"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
+
+    <!-- 跳转浏览器 -->
+    <LinearLayout
+        android:id="@+id/linear_browser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Browser"
+            style="@style/TextLeftStyle"/>
+
+        <TextView
+            android:id="@+id/tv_browser"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/TextRightStyle"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
+
+
+    <!-- 清理缓存 -->
+    <LinearLayout
+        android:id="@+id/linear_clean"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp"
+        android:background="@color/whiteBackground">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="清理缓存"
+            style="@style/TextLeftStyle"/>
+
+        <TextView
+            android:id="@+id/tv_clean"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/item_icon_padding"
+            android:text=""
+            style="@style/TextRightStyle"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/margin_arrow_right"
+            android:src="@drawable/enter"/>
+
+    </LinearLayout>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@color/greyBackground"/>
 
 </LinearLayout>
