--- a/ActivityStartup/app/src/main/res/layout/activity_property_sheet.xml
+++ b/ActivityStartup/app/src/main/res/layout/activity_property_sheet.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:background="@color/whiteBackground"
     tools:context="com.duan.android.activitystartup.propertySheet.PropertySheetActivity">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
@@ -14,60 +15,18 @@
         android:gravity="center"
         android:textColor="@color/whiteBackground"
         android:textSize="18sp"
-        android:text="物性表 Fragment 切换"/>
+        android:text="物性表 字母表联动"/>
+
+    <!--  物性表 字母表联动 overview  -->
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="Overview"
-            android:layout_weight="1"/>
-        <TextView
-            android:id="@+id/tv2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="Abstract"
-            android:layout_weight="1"/>
-        <TextView
-            android:id="@+id/tv3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="Detail"
-            android:layout_weight="1"/>
-    </LinearLayout>
-
-    <FrameLayout
-        android:visibility="gone"
-        android:id="@+id/frame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-        <com.duan.android.activitystartup.widget.NoSlidingViewPager
-            android:id="@+id/view_pager"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/whiteBackground"/>
-
-    </FrameLayout>
-
-    <!--    物性表 overview    -->
-    <LinearLayout
+        android:id="@+id/linear1"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:visibility="visible">
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
+            android:id="@+id/recycler_view"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
@@ -76,16 +35,68 @@
             android:scrollbars="none"/>
 
         <android.support.v7.widget.RecyclerView
-            android:id="@+id/sidebar"
+            android:id="@+id/recycler_slide_bar"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            />
+            android:layout_marginTop="50dp" />
 
     </LinearLayout>
 
 
+    <!-- 物性表 Fragment 切换 start -->
+    <LinearLayout
+        android:id="@+id/linear2"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/tv1"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="Overview"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tv2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="Abstract"
+                android:layout_weight="1"/>
+            <TextView
+                android:id="@+id/tv3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:clickable="true"
+                android:gravity="center"
+                android:text="Detail"
+                android:layout_weight="1"/>
+        </LinearLayout>
+
+        <FrameLayout
+            android:id="@+id/frame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <com.duan.android.activitystartup.widget.NoSlidingViewPager
+                android:id="@+id/view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@color/whiteBackground"/>
+
+        </FrameLayout>
+
+    </LinearLayout>
+    <!-- 物性表 Fragment 切换 end -->
 
 
 </LinearLayout>
